# inwealth-api/models/Login.js
@@ -1,8 +1,14 @@
 const { DataTypes } = require('sequelize')
 module.exports = (sequelize) => {
   return sequelize.define('login', {
-    login: {
-      type: DataTypes.DATE,
+    phone: {
+      type: DataTypes.STRING,
+    },
+    indic: {
+      type: DataTypes.STRING,
+    },
+    mdp: {
+      type: DataTypes.STRING,
     },
   })
 }
